App Changes created

--- a/src/app/Components/header-menu/header-menu.component.html
+++ b/src/app/Components/header-menu/header-menu.component.html
@@ -1,7 +1,10 @@
 <ion-header [translucent]="true">
   <ion-toolbar>
     <ion-title>
-      Header
+      Edubot App
     </ion-title>
+    <ion-buttons slot="end">
+      <ion-button (click)="createModal()">Mudar Setpoints</ion-button>
+    </ion-buttons>
   </ion-toolbar>
 </ion-header>
