--- a/src/app/Components/header-menu/header-menu.component.html
+++ b/src/app/Components/header-menu/header-menu.component.html
@@ -1,10 +1,10 @@
 <ion-header [translucent]="true">
   <ion-toolbar>
     <ion-title>
-      Edubot App
+      Edubot ({{getConnString()}})
     </ion-title>
     <ion-buttons slot="end">
-      <ion-button (click)="createModal()">Mudar Setpoints</ion-button>
+      <ion-button (click)="createModal()">Mudar Variáveis</ion-button>
     </ion-buttons>
   </ion-toolbar>
 </ion-header>
