--- a/src/app/Components/distances-sensores/distances-sensores.component.html
+++ b/src/app/Components/distances-sensores/distances-sensores.component.html
@@ -1,3 +1,12 @@
 <ion-card-header>
   <ion-card-title>Distâncias</ion-card-title>
+  <div class="half-circle">
+    <div style="position: relative;left: -170px; top: 120px;">{{S0}}</div>
+    <div style="position: relative;left: -170px; top: 40px;">{{S1}}</div>
+    <div style="position: relative;left: -140px; top: -40px;">{{S2}}</div>
+    <div style="position: relative;left:  0px; top: -100px;">{{S3}}</div>
+    <div style="position: relative;left: 140px; top: -80px;">{{S4}}</div>
+    <div style="position: relative;left: 170px; top: -40px;">{{S5}}</div>
+    <div style="position: relative;left: 170px; top: -6px;">{{S6}}</div>
+  </div>
 </ion-card-header>
