Connection End, Data Update

--- a/src/app/Components/bumpers/bumpers.component.html
+++ b/src/app/Components/bumpers/bumpers.component.html
@@ -4,22 +4,22 @@
 
 <ion-card>
   <div>
-    <ion-chip [style.background]="info.bumpers[0]? '#B22222':'#228B22'">
+    <ion-chip [style.background]="Bumper1? '#B22222':'#228B22'">
       <ion-label>Esquerda Superior</ion-label>
     </ion-chip>
   </div>
   <div>
-    <ion-chip [style.background]="info.bumpers[1]? '#B22222':'#228B22'">
+    <ion-chip [style.background]="Bumper2? '#B22222':'#228B22'">
       <ion-label>Esquerda Inferior</ion-label>
     </ion-chip>
   </div>
   <div>
-    <ion-chip [style.background]="info.bumpers[2]? '#B22222':'#228B22'">
+    <ion-chip [style.background]="Bumper3? '#B22222':'#228B22'">
       <ion-label>Direita Superior</ion-label>
     </ion-chip>
   </div>
   <div>
-    <ion-chip [style.background]="info.bumpers[3]? '#B22222':'#228B22'">
+    <ion-chip [style.background]="Bumper4? '#B22222':'#228B22'">
       <ion-label>Direita Inferior</ion-label>
     </ion-chip>
   </div>
