--- a/src/app/Components/joystick/joystick.component.html
+++ b/src/app/Components/joystick/joystick.component.html
@@ -2,19 +2,24 @@
   <ion-slides class="slider" style="height: 100%; width: 100%">
     <ion-slide style="height: 100%">
       <distances-sensores
-      [S0]="infoEduService.S0"
-      [S1]="infoEduService.S1"
-      [S2]="infoEduService.S2"
-      [S3]="infoEduService.S3"
-      [S4]="infoEduService.S4"
-      [S5]="infoEduService.S5"
-      [S6]="infoEduService.S6"></distances-sensores>
-    </ion-slide>
-      
-    <ion-slide style="height: 100%">
-      <bumpers></bumpers>
+        [S0]="S0"
+        [S1]="S1"
+        [S2]="S2"
+        [S3]="S3"
+        [S4]="S4"
+        [S5]="S5"
+        [S6]="S6"
+      ></distances-sensores>
     </ion-slide>
 
+    <ion-slide style="height: 100%">
+      <bumpers
+        [Bumper1]="bumper1"
+        [Bumper2]="bumper2"
+        [Bumper3]="bumper3"
+        [Bumper4]="bumper4"
+      ></bumpers>
+    </ion-slide>
   </ion-slides>
 </ion-card>
 
@@ -50,7 +55,10 @@
       </ion-button>
     </div>
     <div style="height: 70px; margin-bottom: 5px">
-      <ion-button (click)="socket.moveBack(infoEduService.speed)" style="width: 100%; height: 100%">
+      <ion-button
+        (click)="socket.moveBack(infoEduService.speed)"
+        style="width: 100%; height: 100%"
+      >
         <ion-icon name="caret-down-outline"></ion-icon>
       </ion-button>
     </div>
