--- a/src/app/Components/setpoints/setpoints.component.html
+++ b/src/app/Components/setpoints/setpoints.component.html
@@ -17,7 +17,7 @@
   <div>
     <ion-item>
       <ion-label>Porta:</ion-label>
-      <ion-input [(ngModel)]="infoEduService.adress" type="number"></ion-input>
+      <ion-input [(ngModel)]="infoEduService.port" type="number"></ion-input>
     </ion-item>
   </div>
   <ion-button style="width: 100% ; height: 40%;" (click)="connect()"> Conectar </ion-button>
