--- a/src/app/Components/header-menu/header-menu.component.html
+++ b/src/app/Components/header-menu/header-menu.component.html
@@ -4,7 +4,7 @@
       Edubot ({{getConnString()}})
     </ion-title>
     <ion-buttons slot="end">
-      <ion-button (click)="createModal()">Mudar Variáveis</ion-button>
+      <ion-button (click)="createModal()">Configurações</ion-button>
     </ion-buttons>
   </ion-toolbar>
 </ion-header>
