--- a/src/app/Components/joystick/joystick.component.html
+++ b/src/app/Components/joystick/joystick.component.html
@@ -1,7 +1,7 @@
 <ion-card style="height: 45%; margin-top: 50px">
   <ion-slides class="slider" style="height: 100%; width: 100%">
     <ion-slide style="height: 100%">
-      <distances-sensores
+      <distance
         [S0]="S0"
         [S1]="S1"
         [S2]="S2"
@@ -9,7 +9,7 @@
         [S4]="S4"
         [S5]="S5"
         [S6]="S6"
-      ></distances-sensores>
+      ></distance>
     </ion-slide>
 
     <ion-slide style="height: 100%">
