--- a/src/app/Components/setpoints/setpoints.component.html
+++ b/src/app/Components/setpoints/setpoints.component.html
@@ -36,7 +36,7 @@
   </div>
   <div>
     <ion-item>
-      <ion-label>Ângulo:</ion-label>
+      <ion-label>Ângulo de Giro:</ion-label>
       <ion-input
         [(ngModel)]="infoEduService.angle"
         type="number"
